<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1">

    </FrameLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mglass_green" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/bt_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    android:textSize="@dimen/font_normal" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_large"
                    android:src="@drawable/ic_cross" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/bg_primary_round"
                android:hint="@string/write_name"
                android:inputType="text"
                android:padding="@dimen/spacing_normal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:text="@string/location"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/bg_primary_round"
                android:padding="@dimen/spacing_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:text="@string/is_top"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_is_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_top_yes"
                    style="@style/RadioButtonStyle"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rb_top_no"
                    style="@style/RadioButtonStyle"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/popularity"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal">

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/rsb_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_tiny"
                    app:bar_color="@color/gray_light"
                    app:bar_highlight_color="@color/colorPrimary"
                    app:data_type="_integer"
                    app:left_thumb_color="@color/colorPrimary"
                    app:max_value="100"
                    app:min_value="0"
                    app:right_thumb_color="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_min_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rsb_popularity"
                    android:layout_marginLeft="@dimen/spacing_small" />

                <TextView
                    android:id="@+id/tv_max_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/rsb_popularity"
                    android:layout_marginRight="@dimen/spacing_small" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/bg_green_round"
                android:padding="@dimen/spacing_small"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_larger" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
